--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,18 +1,39 @@
-# name: CI -> Deploy to My website
-# on:
-#   push:
-#     branches: [main]
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v4
-#       # Here is the deployment action
-#       - name: Upload from public_html via FTP
-#         uses: airvzxf/ftp-deployment-action@latest
-#         with:
-#           server: algobot048.com
-#           user: algobot
-#           password: syzh3lpf4187
-#           local_dir: ./
-#           remote_dir: old.algobot048.com/
+name: Deploy Laravel Project to Shared Hosting
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      # - name: Setup PHP
+      #   uses: shivammathur/setup-php@v2
+      #   with:
+      #     php-version: '8.2'
+      #     extensions: mbstring, intl, pdo_mysql
+      #     coverage: none
+
+      # - name: Install dependencies
+      #   run: composer install --prefer-dist --no-progress --no-suggest
+
+      # - name: Run tests
+      #   run: vendor/bin/phpunit
+
+      - name: Deploy to Shared Hosting
+        uses: appleboy/ssh-action@master
+        with:
+          host: algobot048.com
+          username: algobot
+          password: syzh3lpf4187
+          # script: |
+          #   cd /path/to/your/project/on/server
+          #   git pull
+          #   composer install --no-dev
+          #   php artisan migrate --force
